--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
-
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -154,7 +153,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <docent-list-user></docent-list-user>
               </hr>
                 <h1> Appointment List </h1>
-                <appointment-list-user></appointment-list-user>
+                <!-- <appointment-list-user></appointment-list-user> -->
             </paper-material>
             </div>
             </section>
