--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -27,10 +27,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
-
-
-
-
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
+<link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
 <!-- Date & Time Picker -->
 
@@ -63,3 +64,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="appointment-list-user/appointment-list-user.html">
 <link rel="import" href="create-rooms/create-rooms.html">
 <link rel="import" href="rooms-list/rooms-list.html">
+<link rel="import" href="loading-placeholder/loading-placeholder.html">
